# backend/schema/openapi.yaml
@@ -228,15 +228,24 @@ paths:
           required: false
           schema:
             type: string
+        - name: cursor
+          in: query
+          required: false
+          schema:
+            type: string
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 50
       responses:
         "200":
           description: Transaction response
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: "#/components/schemas/Transaction"
+                $ref: "#/components/schemas/TransactionsResponse"
         "404":
           description: User not found
           content:
@@ -913,6 +922,18 @@ components:
       required:
         - id
         - message
+    TransactionsResponse:
+      type: object
+      properties:
+        transactions:
+          type: array
+          items:
+            $ref: "#/components/schemas/Transaction"
+        cursor:
+          type: string
+      required:
+        - transactions
+        - cursor
     TransactionCreateResponse:
       type: object
       properties:
